Updated the projects page

--- a/_posts/project/2017-04-18-MIC.markdown
+++ b/_posts/project/2017-04-18-MIC.markdown
@@ -1,7 +1,7 @@
 ---
 layout: project
 title:  "Infrasonic Mic"
-description: The human elephant conflict in Sri Lanka has been a cause of major concern over the past decade. Frequent clashes between wild elephants and villagers have resulted in severe damage to property, as well as loss of lives for both humans and elephants. Competition for space is the primary reason for conflict between humans and elephants. Elephants that escape from the wildlife national parks venture into villages creating destruction in their wake. To prevent such mishaps, a proper system is required to contain and monitor elephants in national parks. In this paper, we describe different approaches to detect elephants and possible ways of monitoring the national wildlife parks. We also elaborate on the advantages and limitations of each approach, and determine what sort of system is needed to tame the human elephant conflict.
+description: The human elephant conflict in Sri Lanka has been a cause of major concern over the past decade. Frequent clashes between wild elephants and villagers have resulted in severe damage to property, as well as loss of lives for both humans and elephants. Competition for space is the primary reason for conflict between humans and elephants. Elephants that escape from the wildlife national parks venture into villages creating destruction in their wake. To prevent such mishaps, a proper system is required to contain and monitor elephants in national parks. In this project, we describe different approaches to detect elephants and possible ways of monitoring the national wildlife parks. We also elaborate on the advantages and limitations of each approach, and determine what sort of system is needed to tame the human elephant conflict.
 
 date:   2014-04-25 16:54:46
 author: Marcel Newman
